--- a/.travis.yml
+++ b/.travis.yml
@@ -97,7 +97,7 @@ script:
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo pip install h5py; fi 
     - git clone git://github.com/mwarusz/drops.py.git
     - cd drops.py
-    - git checkout osx_python
+    - git checkout osx_python_2
     - mkdir build
     - cd build
     - cmake ..
