--- a/.travis.yml
+++ b/.travis.yml
@@ -79,6 +79,7 @@ script:
     - cd build
     - if [[ $TRAVIS_OS_NAME == 'linux' && $CXX == 'clang++' ]]; then cmake -DCMAKE_CXX_COMPILER=/usr/bin/clang++ ..; fi # Travis default is not the packaged one
     - cmake ..
+    - cat CMakeCache.txt
     - sudo make install
     - cd ../../..
 
@@ -91,8 +92,9 @@ script:
     - cmake -DCMAKE_BUILD_TYPE=Release ../ 
     - if [[ $CXX == 'clang++' ]]; then make; fi # disable compilation on the CUDA machine with g++ - it has not enough memory to compile icicle
     - cd ../../../..
-
+    
     ## drops.py (it is written in Python so no compilation, just unit tests)
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; the otool -L /Library/Python/2.7/site-packages/libcloudphxx.so; fi 
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo $apt_get_install python-h5py; fi 
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo pip install h5py; fi 
     - git clone git://github.com/mwarusz/drops.py.git
