--- a/.travis.yml
+++ b/.travis.yml
@@ -87,14 +87,17 @@ script:
     - cd libcloudphxx/tests/paper_GMD_2015
     - mkdir build 
     - cd build
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then cmake -DBOOST_ROOT=/usr/local; fi 
     - if [[ $TRAVIS_OS_NAME == 'linux' && $CXX == 'clang++' ]]; then cmake -DCMAKE_CXX_COMPILER=/usr/bin/clang++ ../; fi # Travis default is not the packaged one
     - cmake -DCMAKE_BUILD_TYPE=Release ../ 
-    - cat CMakeCache.txt
     - if [[ $CXX == 'clang++' ]]; then make; fi # disable compilation on the CUDA machine with g++ - it has not enough memory to compile icicle
     - cd ../../../..
     
     ## drops.py (it is written in Python so no compilation, just unit tests)
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then otool -L /Library/Python/2.7/site-packages/libcloudphxx.so; fi 
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then otool -L /Library/Python/2.7/site-packages/libcloudphxx.so; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; LCD_PATH=`/Library/Python/2.7/site-packages/libcloudphxx.so` ; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; LLG_PATH=`/usr/local/lib/libcloudphxx_lgrngn.so` ; fi
+- if [[ $TRAVIS_OS_NAME == 'osx' ]]; then install_name_tool -change libcloudphxx_lgrngn.dylib ${LLG_PATH} ${LCD_PATH}; fi
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo $apt_get_install python-h5py; fi 
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo pip install h5py; fi 
     - git clone git://github.com/mwarusz/drops.py.git
