--- a/.travis.yml
+++ b/.travis.yml
@@ -95,8 +95,8 @@ script:
     
     ## drops.py (it is written in Python so no compilation, just unit tests)
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then otool -L /Library/Python/2.7/site-packages/libcloudphxx.so; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; LCD_PATH=`/Library/Python/2.7/site-packages/libcloudphxx.so` ; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; LLG_PATH=`/usr/local/lib/libcloudphxx_lgrngn.so` ; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then LCD_PATH=`/Library/Python/2.7/site-packages/libcloudphxx.so`; fi
+    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then LLG_PATH=`/usr/local/lib/libcloudphxx_lgrngn.so`; fi
 - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then install_name_tool -change libcloudphxx_lgrngn.dylib ${LLG_PATH} ${LCD_PATH}; fi
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo $apt_get_install python-h5py; fi 
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo pip install h5py; fi 
