--- a/.travis.yml
+++ b/.travis.yml
@@ -91,20 +91,14 @@ script:
     - cd ../../../..
     
     ## drops.py (it is written in Python so no compilation, just unit tests)
-    # first fix rpath issues
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then otool -L /Library/Python/2.7/site-packages/libcloudphxx.so; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then LCD_PATH='/Library/Python/2.7/site-packages/libcloudphxx.so'; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then LLG_PATH='/usr/local/lib/libcloudphxx_lgrngn.dylib'; fi
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo install_name_tool -change libcloudphxx_lgrngn.dylib ${LLG_PATH} ${LCD_PATH}; fi
+    # only on linux
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo $apt_get_install python-h5py; fi 
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then sudo pip install h5py; fi 
-    - git clone --depth=1 git://github.com/igfuw/drops.py.git
-    - cd drops.py
-    - mkdir build
-    - cd build
-    - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then cmake .. -DPYTHON_LIBRARY=${PY_LIB} -DPYTHON_INCLUDE_DIR=${PY_INC}; fi
-    - cmake ..
-    - make test || cat Testing/Temporary/LastTest.log / # "/" intentional! (just to make cat exit with an error code)
+    - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then git clone --depth=1 git://github.com/igfuw/drops.py.git; fi
+    - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then cd drops.py; fi
+    - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then mkdir build; fi
+    - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then cd build; fi
+    - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then  cmake ..; fi
+    - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then make test || cat Testing/Temporary/LastTest.log /; fi # "/" intentional! (just to make cat exit with an error code)
 
     ## parcel
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then sudo $apt_get_install python-matplotlib python-gnuplot gnuplot-nox; fi
