--- a/tests/paper_GMD_2015/tests/chem_sandbox/CMakeLists.txt
+++ b/tests/paper_GMD_2015/tests/chem_sandbox/CMakeLists.txt
@@ -4,7 +4,7 @@ add_test(calc_chem calc_chem ${CMAKE_BINARY_DIR})
 find_package(HDF5 COMPONENTS CXX REQUIRED QUIET)
 find_package(Boost COMPONENTS iostreams system filesystem REQUIRED)
 
-foreach(case lgrngn_ch lgrngn_ch_spec lgrngn_ch_chem)
+foreach(case lgrngn_ch lgrngn_ch_spec lgrngn_ch_chem lgrngn_ch_spec_chem)
   add_executable(plot_${case} plot_${case}.cpp)
   add_test(plot_${case} plot_${case} ${CMAKE_BINARY_DIR})
   target_link_libraries(plot_${case} ${HDF5_LIBRARIES})
